--- a/css/random.css
+++ b/css/random.css
@@ -70,6 +70,10 @@ a:hover {
 #random-index .index-article-container .index-article-list {
   text-align: left;
 }
+#random-index .index-article-container .index-article-list .post-title-item {
+  margin-left: 0px;
+  padding-left: 0px;
+}
 #random-index a {
   padding: 5px;
 }
